--- a/comparisons.html
+++ b/comparisons.html
@@ -24,30 +24,30 @@
 
   <ul class="flex-js-c gap-1 mb-10">
     <li>
-      <a href="home.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class=" text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Каталог</a>
+      <a href="catalog.html" class=" text-[#6E6E6E] hover:text-blue">Каталог</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Катушки</a>
+      <a href="catalog.html" class=" text-[#6E6E6E] hover:text-blue">Катушки</a>
     </li>
   </ul>
 
 
   <div class="w-full mt-6">
-    <h1 class="text-[25.6px] font-medium mb-5 tracking-[-0.5px]">Сравнения</h1>
-    <div class="flex-js-c gap-4 max-[613.6px]:flex-wrap">
-      <span class="text-[#6E6E6E] max-[613.6px]:w-full">Показывать</span>
-      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[24px] burder transition hover:border-[#009FFF] max-[613.6px]:text-[11.2px] max-[613.6px]:w-[36.8%]">Все характеристики</button>
-      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[24px] burder transition hover:border-[#009FFF] max-[613.6px]:text-[11.2px] max-[613.6px]:w-[36.8%]">Только различия</button>
-      <a href="#" class="text-[#6E6E6E] underline flex-js-e max-[613.6px]:w-full">
+    <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Сравнения</h1>
+    <div class="flex-js-c gap-4 max-[767px]:flex-wrap">
+      <span class="text-[#6E6E6E] max-[767px]:w-full">Показывать</span>
+      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px] burder transition hover:border-[#009FFF] max-[767px]:text-[14px] max-[767px]:w-[46%]">Все характеристики</button>
+      <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px] burder transition hover:border-[#009FFF] max-[767px]:text-[14px] max-[767px]:w-[46%]">Только различия</button>
+      <a href="#" class="text-[#6E6E6E] underline flex-js-e max-[767px]:w-full">
         <img src="img/icons/delete-remove.svg" alt="delete-remove">
         Очистить
       </a>
@@ -57,120 +57,120 @@
       <table class="mt-10">
         <tbody>
         <tr class="border-b">
-          <td class="pb-4 min-w-[200px] w-[240px]">
+          <td class="pb-4 min-w-[250px] w-[300px]">
  
           </td>
-          <td class="pb-4 min-w-[200px] w-[240px]">
-            <div class="px-[24px] relative">
-              <img src="img/products/product2.png" alt="product" class="w-[64%]">
-              <h4 class="text-[12.8px] md:text-[14.4px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+          <td class="pb-4 min-w-[250px] w-[300px]">
+            <div class="px-[30px] relative">
+              <img src="img/products/product2.png" alt="product" class="w-[80%]">
+              <h4 class="text-[16px] md:">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
               <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
             </div>
           </td>
-          <td class="pb-4 min-w-[200px] w-[240px]">
-            <div class="px-[24px] relative">
-              <img src="img/products/product2.png" alt="product" class="w-[64%]">
-              <h4 class="text-[12.8px] md:text-[14.4px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+          <td class="pb-4 min-w-[250px] w-[300px]">
+            <div class="px-[30px] relative">
+              <img src="img/products/product2.png" alt="product" class="w-[80%]">
+              <h4 class="text-[16px] md:">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
               <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
             </div>
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Цена</b>
+            <b class="">Цена</b>
           </td>
-          <td class="border-r pl-6 text-[14.4px]">
+          <td class="border-r pl-6 ">
             5 965 руб
           </td>
-          <td class="border-r pl-6 text-[14.4px]">
+          <td class="border-r pl-6 ">
             5 965 руб
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Тип удилища</b>
+            <b class="">Тип удилища</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Штекерное
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Штекерное
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Предназначение</b>
+            <b class="">Предназначение</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             для спиннинга/ ловля в заброс/ для ловли на джиг/ для микроджига/ для ультралайта
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Бренд</b>
+            <b class="">Бренд</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Jaxon
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Jaxon
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Для вида рыбы</b>
+            <b class="">Для вида рыбы</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             на окуня/ на щуку/ на судака/ для хищной рыбы
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             на окуня/ на щуку/ на судака/ для хищной рыбы
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Длина (см)</b>
+            <b class="">Длина (см)</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             210
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             210
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Назначение</b>
+            <b class="">Назначение</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             для рыбалки
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             для рыбалки
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Модель</b>
+            <b class="">Модель</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Blue_Wind
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             Blue_Wind
           </td>
         </tr>
         <tr>
           <td class="pt-6 border-r">
-            <b class="text-[14.4px]">Вес (гр)</b>
+            <b class="">Вес (гр)</b>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             102
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px]">
+          <td class="border-r px-4 text-[16px] md:">
             102
           </td>
         </tr>
@@ -178,14 +178,14 @@
           <td class="pt-6 border-r">
 
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px] pt-6 pb-4">
-            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
+          <td class="border-r px-4 text-[16px] md: pt-6 pb-4">
+            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
               В корзину
               <img src="img/icons/basket-white.svg" alt="">
             </button>
           </td>
-          <td class="border-r px-4 text-[12.8px] md:text-[14.4px] pt-6 pb-4">
-            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
+          <td class="border-r px-4 text-[16px] md: pt-6 pb-4">
+            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
               В корзину
               <img src="img/icons/basket-white.svg" alt="">
             </button>
@@ -207,8 +207,8 @@
 
       <div data-for="4" class="w-full mb-10">
           <div class="relative flex-js-c gap-4 pb-4 border-b mb-4">
-            <img src="img/products/product2.png" alt="product" class="w-[59.2px]">
-            <h4 class="text-[12.8px] md:text-[14.4px] pe-4 ">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+            <img src="img/products/product2.png" alt="product" class="w-[74px]">
+            <h4 class="text-[16px] md: pe-4 ">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
             <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
           </div>
 
@@ -252,7 +252,7 @@
             <p>Blue_Wind</p>
           </div>
 
-        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
+        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
           В корзину
           <img src="img/icons/basket-white.svg" alt="">
         </button>
