--- a/favorite.html
+++ b/favorite.html
@@ -27,245 +27,47 @@
 
   <ul class="flex-js-c gap-1 mb-7">
     <li>
-      <a href="home.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class=" text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Избранное</a>
+      <a href="catalog.html" class=" text-[#6E6E6E] hover:text-blue">Избранное</a>
     </li>
   </ul>
 
-  <h2 class="font-medium text-[#212121] text-[19.2px] sm:text-[25.6px] mb-4 sm:mb-[24px]">Избранное</h2>
+  <h2 class="font-medium text-[#212121] text-[24px] sm:text-[32px] mb-4 sm:mb-[30px]">Избранное</h2>
 
-  <div class="w-full bg-[#F4F4F4] rounded-[9.6px] px-4 flex-jsb-c sm:hidden h-[38.4px] mb-5">
+  <div class="w-full bg-[#F4F4F4] rounded-[12px] px-4 flex-jsb-c sm:hidden h-[48px] mb-5">
     <h4 class="font-semibold">Фильтр</h4>
     <img src="img/icons/arrow-right.svg" alt="right">
   </div>
 
-  <div class="items-center mb-[24px] max-[613.6px]:flex-col max-[613.6px]:items-start hidden sm:flex">
-    <span class="mr-[12.8px] text-[#6E6E6E] text-[12.8px] max-[613.6px]:mb-[9.6px]">Сортировать</span>
+  <div class="items-center mb-[30px] max-[767px]:flex-col max-[767px]:items-start hidden sm:flex">
+    <span class="mr-[16px] text-[#6E6E6E] text-[16px] max-[767px]:mb-[12px]">Сортировать</span>
     <select class="bg-[#F4F4F4] border-[none] border-0 
-    cursor-pointer focus:outline-none focus:border-0 max-[613.6px]:mb-[9.6px]">
+    cursor-pointer focus:outline-none focus:border-0 max-[767px]:mb-[12px]">
       <option value="1">Хиты продаж</option>
       <option value="2">Хиты продаж 2</option>
       <option value="3">Хиты продаж 3</option>
     </select>
-    <span class="mr-[12.8px] ml-[19.2px] inline-block text-[#6E6E6E] text-[12.8px] max-[613.6px]:ml-0
-    max-[613.6px]:mb-[9.6px]">Показывать</span>
+    <span class="mr-[16px] ml-[24px] inline-block text-[#6E6E6E] text-[16px] max-[767px]:ml-0
+    max-[767px]:mb-[12px]">Показывать</span>
     <div class="flex">
-      <a href="#" class="py-[8px] rounded-[32px] px-[12.8px] mr-[3.2px] text-[#6E6E6E] border
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
         border-[rgba(110,110,110,0.25)] hover:border-blue">Акции</a>
-      <a href="#" class="py-[8px] rounded-[32px] px-[12.8px] mr-[3.2px] text-[#6E6E6E] border
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
          border-[rgba(110,110,110,0.25)] hover:border-blue">Новинки</a>
-      <a href="#" class="py-[8px] rounded-[32px] px-[12.8px] mr-[3.2px] text-[#6E6E6E]
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E]
         border border-[rgba(110,110,110,0.25)] hover:border-blue">Хиты</a>
     </div>
   </div>
 
-  <div class="grid grid-cols-5 gap-[16px] max-[1280px]:grid-cols-4 max-[1040px]:grid-cols-3
-  max-[819.2px]:grid-cols-2 max-[520px]:grid-cols-1">
-    <div class="w-full">
-      <div class="w-full h-[341.6px] border rounded-[12.8px] relative">
-        <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
-          </div>
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/rating-gray.svg" alt="rating-gray">
-          </div>
-        </div>
-
-        <div class="swiper swiperProductItems h-full relative">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-          </div>
-          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-        </div>
-
-
-      </div>
-      <div class="w-full p-4">
-        <div class="flex-jsb-c">
-          <div class="flex-js-c text-[#6E6E6E] gap-[4px]">
-            <img src="img/icons/star-yellow.svg" alt="star-yellow">
-            4.2
-            <span class="min-w-[3.2px] max-w-[3.2px] w-[3.2px] h-[3.2px] rounded-full bg-[#6E6E6E] mx-1"></span>
-            29 отзывов
-          </div>
-          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
-        </div>
-
-        <h3 class="text-[14.4px] text-[#212121] mt-1 tracking-[-0.1px] leading-[19.2px] h-[57.6px]">Спиннинг Daiwa Ninja X SF
-          245 см тест 15-50 гр</h3>
-
-
-        <div class="flex-js-c gap-2 text-[#707070] hidden">
-          Производитель
-          <span class="text-[#323232] font-bold">Daiwa</span>
-        </div>
-
-
-        <div class="flex-js-c gap-1 mt-2">
-          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[11.2px] text-[#CF301B] font-bold">+555 Кешбэк</span>
-        </div>
-
-
-        <div class="flex-jsb-c mt-2">
-          <h4 class="text-[19.2px] font-semibold">3 200 ₽</h4>
-          <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            В корзину
-            <img src="img/icons/basket-white.svg" alt="">
-          </button>
-        </div>
-
-
-      </div>
-    </div>
-    <div class="w-full">
-      <div class="w-full h-[341.6px] border rounded-[12.8px] relative">
-        <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
-          </div>
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/rating-gray.svg" alt="rating-gray">
-          </div>
-        </div>
-
-        <div class="swiper swiperProductItems h-full relative">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-          </div>
-          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-        </div>
-
-
-      </div>
-      <div class="w-full p-4">
-        <div class="flex-jsb-c">
-          <div class="flex-js-c text-[#6E6E6E] gap-[4px]">
-            <img src="img/icons/star-yellow.svg" alt="star-yellow">
-            4.2
-            <span class="min-w-[3.2px] max-w-[3.2px] w-[3.2px] h-[3.2px] rounded-full bg-[#6E6E6E] mx-1"></span>
-            29 отзывов
-          </div>
-          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
-        </div>
-
-        <h3 class="text-[14.4px] text-[#212121] mt-1 tracking-[-0.1px] leading-[19.2px] h-[57.6px]">Спиннинг Daiwa Ninja X SF
-          245 см тест 15-50 гр</h3>
-
-
-        <div class="flex-js-c gap-2 text-[#707070] hidden">
-          Производитель
-          <span class="text-[#323232] font-bold">Daiwa</span>
-        </div>
-
-
-        <div class="flex-js-c gap-1 mt-2">
-          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[11.2px] text-[#CF301B] font-bold">+555 Кешбэк</span>
-        </div>
-
-
-        <div class="flex-jsb-c mt-2">
-          <h4 class="text-[19.2px] font-semibold">3 200 ₽</h4>
-          <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            В корзину
-            <img src="img/icons/basket-white.svg" alt="">
-          </button>
-        </div>
-
-
-      </div>
-    </div>
-    <div class="w-full">
-      <div class="w-full h-[341.6px] border rounded-[12.8px] relative">
-        <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/heard-blue-full.svg" alt="heard-gray">
-          </div>
-          <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-            <img src="img/icons/rating-gray.svg" alt="rating-gray">
-          </div>
-        </div>
-
-        <div class="swiper swiperProductItems h-full relative">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-            <div class="swiper-slide px-6 flex-jc-c">
-              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-            </div>
-          </div>
-          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-        </div>
-
-
-      </div>
-      <div class="w-full p-4">
-        <div class="flex-jsb-c">
-          <div class="flex-js-c text-[#6E6E6E] gap-[4px]">
-            <img src="img/icons/star-yellow.svg" alt="star-yellow">
-            4.2
-            <span class="min-w-[3.2px] max-w-[3.2px] w-[3.2px] h-[3.2px] rounded-full bg-[#6E6E6E] mx-1"></span>
-            29 отзывов
-          </div>
-          <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
-        </div>
-
-        <h3 class="text-[14.4px] text-[#212121] mt-1 tracking-[-0.1px] leading-[19.2px] h-[57.6px]">Спиннинг Daiwa Ninja X SF
-          245 см тест 15-50 гр</h3>
-
-
-        <div class="flex-js-c gap-2 text-[#707070] hidden">
-          Производитель
-          <span class="text-[#323232] font-bold">Daiwa</span>
-        </div>
-
-
-        <div class="flex-js-c gap-1 mt-2">
-          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-          <span class="text-[11.2px] text-[#CF301B] font-bold">+555 Кешбэк</span>
-        </div>
-
-
-        <div class="flex-jsb-c mt-2">
-          <h4 class="text-[19.2px] font-semibold">3 200 ₽</h4>
-          <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            В корзину
-            <img src="img/icons/basket-white.svg" alt="">
-          </button>
-        </div>
-
-
-      </div>
+  <div class="grid grid-cols-5 gap-[20px] max-[1600px]:grid-cols-4 max-[1300px]:grid-cols-3
+  max-[1024px]:grid-cols-2 max-[650px]:grid-cols-1">
+   <div data-for="10">
+          <component src="./components/product-card.html"></component>
     </div>
 
   </div>
