--- a/gift-certificate.html
+++ b/gift-certificate.html
@@ -26,67 +26,67 @@
 
 
   <div class="bg-[#F4F4F4] relative z-[0] overflow-hidden flex items-center
-rounded-[19.2px] mb-[48px] mt-[64px] sm:mt-[16px] p-[72px] max-[1040px]:p-[32px] max-[613.6px]:px-[16px]">
+rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] max-[767px]:px-[20px]">
     <div class="flex flex-col items-start">
-      <h2 class="max-w-[672px] font-lena mb-[24px] uppercase text-[#009FFF]
-        text-[64px] leading-[80%] max-[1040px]:text-[35.2px] max-[613.6px]:text-[25.6px] max-[613.6px]:mb-[16px]">Лучший
+      <h2 class="max-w-[640px] font-lena mb-[30px] uppercase text-[#009FFF]
+        text-[60px] leading-[100%] max-[1300px]:text-[44px] max-[767px]:text-[32px] max-[767px]:mb-[20px]">Лучший
         подарок- снасти для рыбалки!</h2>
-      <p class="max-w-[400px] text-[#323232] text-[12.8px] mb-[32px] max-[613.6px]:mb-[16px]">Вы хотите подарить что-то
+      <p class="max-w-[500px] text-[#323232] text-[16px] mb-[40px] max-[767px]:mb-[20px]">Вы хотите подарить что-то
         связанное
         со спортом, со здоровым образом жизни, но сомневаетесь, что выбрать?
         Для таких случаев есть Подарочная карта!</p>
-      <div class="flex max-[613.6px]:flex-col">
-        <a href="#" class="flex items-center mr-[32px] max-[613.6px]:mr-[0]">
-          <img src="img/Inform.svg" alt="" class="mr-[4.8px] mt-[1.6px]">
+      <div class="flex max-[767px]:flex-col">
+        <a href="#" class="flex items-center mr-[40px] max-[767px]:mr-[0]">
+          <img src="img/Inform.svg" alt="" class="mr-[6px] mt-[2px]">
           <span class="border-b border-[#009FFF] text-[#009FFF] ">Как работают подарочные карты?</span>
         </a>
         <a href="#" class="flex">
-          <span class="border-b border-[#009FFF] text-[#009FFF] max-[613.6px]:mt-[8px]">Правила</span>
+          <span class="border-b border-[#009FFF] text-[#009FFF] max-[767px]:mt-[10px]">Правила</span>
         </a>
       </div>
     </div>
-    <img src="img/gift-image.png" alt="" class="absolute top-0 right-0 z-[-1] h-[80%] max-[1040px]:hidden">
+    <img src="img/gift-image.png" alt="" class="absolute top-0 right-0 z-[-1] h-[100%] max-[1300px]:hidden">
   </div>
 
-  <div class="flex mt-[32px] mb-[80px] max-[1120px]:flex-col max-[613.6px]:my-[40px]">
-    <div class="max-w-[544px] mr-[24px] max-[1120px]:mr-[0] max-[1120px]:mb-[16px]">
-      <h3 class="font-lena mb-[19.2px] text-[48px] leading-[80%]
-         text-[#212121] font-normal max-[613.6px]:text-[25.6px]">Электронная подарочная карта</h3>
-      <p class="text-[16px] text-[#323232] max-[613.6px]:text-[12.8px]">Незаменима, чтобы поздравить на расстоянии</p>
+  <div class="flex mt-[40px] mb-[100px] max-[1400px]:flex-col max-[767px]:my-[50px]">
+    <div class="max-w-[680px] mr-[30px] max-[1400px]:mr-[0] max-[1400px]:mb-[20px]">
+      <h3 class="font-lena mb-[24px] text-[60px] leading-[100%]
+         text-[#212121] font-normal max-[767px]:text-[32px]">Электронная подарочная карта</h3>
+      <p class="text-[20px] text-[#323232] max-[767px]:text-[16px]">Незаменима, чтобы поздравить на расстоянии</p>
     </div>
     <div>
-      <div class="grid grid-cols-2 gap-[40px] max-[613.6px]:grid-cols-1">
+      <div class="grid grid-cols-2 gap-[50px] max-[767px]:grid-cols-1">
         <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon1.svg" alt="" class="m-auto">
                 </span>
-          <span class="text-[#323232] text-[12.8px]">Электронной Подарочной картой можно оплачивать
+          <span class="text-[#323232] text-[16px]">Электронной Подарочной картой можно оплачивать
                      покупки и в розничном магазине и на сайте </span>
         </div>
         <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon2.svg" alt="" class="m-auto">
                 </span>
-          <span class="text-[#323232] text-[12.8px]">Отправляйте подарок сразу или в конкретную дату,
+          <span class="text-[#323232] text-[16px]">Отправляйте подарок сразу или в конкретную дату,
                      а можно распечатать и подарить лично.</span>
         </div>
         <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon3.svg" alt="" class="m-auto">
                 </span>
-          <span class="text-[#323232] text-[12.8px]">Любой номинал от 500 до 150 000 рублей.</span>
+          <span class="text-[#323232] text-[16px]">Любой номинал от 500 до 150 000 рублей.</span>
         </div>
         <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon4.svg" alt="" class="m-auto">
                 </span>
-          <span class="text-[#323232] text-[12.8px]">Действует целый год с момента покупки,
+          <span class="text-[#323232] text-[16px]">Действует целый год с момента покупки,
                      а об окончании срока действия мы напомним.</span>
         </div>
       </div>
       <button
-          class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px]
-         text-white text-nowrap font-bold flex-jc-c gap-2 mt-[40px] max-[613.6px]:mt-[24px]">
+          class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px]
+         text-white text-nowrap font-bold flex-jc-c gap-2 mt-[50px] max-[767px]:mt-[30px]">
         Оформить электронную карту
       </button>
     </div>
@@ -94,43 +94,43 @@ rounded-[19.2px] mb-[48px] mt-[64px] sm:mt-[16px] p-[72px] max-[1040px]:p-[32px]
 
 </div>
 
-<div class="bg-[#F4F4F4] pt-[64px] pb-[64px] max-[613.6px]:my-[32px] max-[613.6px]:py-[32px]">
+<div class="bg-[#F4F4F4] pt-[80px] pb-[80px] max-[767px]:my-[40px] max-[767px]:py-[40px] mb-[-100px]">
   <div class="container text-center">
-    <h3 class="max-w-[600px] w-full text-[#212121] text-[51.2px]
-        leading-[80%] text-center mx-auto my-0 font-lena mb-[16px] max-[613.6px]:text-[25.6px]">Пластиковая
+    <h3 class="max-w-[750px] w-full text-[#212121] text-[64px]
+        leading-[100%] text-center mx-auto my-0 font-lena mb-[20px] max-[767px]:text-[32px]">Пластиковая
       подарочная карта</h3>
-    <p class="text-[16px] text-[#323232] mb-[32px] max-[613.6px]:text-[14.4px] max-[613.6px]:mt-[16px]">Универсальный
+    <p class="text-[20px] text-[#323232] mb-[40px] max-[767px]:max-[767px]:mt-[20px]">Универсальный
       подарок</p>
-    <div class="grid grid-cols-4 gap-[24px] max-w-[1040px] w-full mx-auto my-0
-        max-[819.2px]:grid-cols-2 max-[613.6px]:grid-cols-1">
+    <div class="grid grid-cols-4 gap-[30px] max-w-[1300px] w-full mx-auto my-0
+        max-[1024px]:grid-cols-2 max-[767px]:grid-cols-1">
       <div class="text-center">
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] mx-auto my-0 flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] mx-auto my-0 flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon6.svg" alt="" class="m-auto">
                 </span>
-        <span class="text-[#323232] text-[12.8px]">Резервируйте на сайте и забирайте в розничном магазине, а можете заказать на доставку.*</span>
+        <span class="text-[#323232] text-[16px]">Резервируйте на сайте и забирайте в розничном магазине, а можете заказать на доставку.*</span>
       </div>
       <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] mx-auto my-0 flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] mx-auto my-0 flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon7.svg" alt="" class="m-auto">
                 </span>
-        <span class="text-[#323232] text-[12.8px]">Подарок рыбаку на любой праздник !</span>
+        <span class="text-[#323232] text-[16px]">Подарок рыбаку на любой праздник !</span>
       </div>
       <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] mx-auto my-0 flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] mx-auto my-0 flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon8.svg" alt="" class="m-auto">
                 </span>
-        <span class="text-[#323232] text-[12.8px]">Пластиковые карты на 500, 1 000, 2 000, 3 000 и 5 000 рублей.</span>
+        <span class="text-[#323232] text-[16px]">Пластиковые карты на 500, 1 000, 2 000, 3 000 и 5 000 рублей.</span>
       </div>
       <div>
-                <span class="rounded-[12.8px] w-[48px] h-[48px] mb-[16px] mx-auto my-0 flex bg-[#1A9BEA]">
+                <span class="rounded-[16px] w-[60px] h-[60px] mb-[20px] mx-auto my-0 flex bg-[#1A9BEA]">
                     <img src="img/gift-card-icon9.svg" alt="" class="m-auto">
                 </span>
-        <span class="text-[#323232] text-[12.8px]">Действует один год с момента активации.</span>
+        <span class="text-[#323232] text-[16px]">Действует один год с момента активации.</span>
       </div>
     </div>
     <button
-        class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px]
-            text-white text-nowrap font-bold flex-jc-c gap-2 mt-[40px]  mx-auto my-0">
+        class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px]
+            text-white text-nowrap font-bold flex-jc-c gap-2 mt-[50px]  mx-auto my-0">
       Оформить пластиковую карту
     </button>
   </div>
