--- a/payment-delivery.html
+++ b/payment-delivery.html
@@ -28,29 +28,29 @@
 
   <ul class="flex-js-c gap-1 mb-7">
     <li>
-      <a href="home.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Покупателям</a>
+      <a href="catalog.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Покупателям</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
         •
       </li>
     <li>
-      <a href="catalog.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Оплата и доставка</a>
+      <a href="catalog.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Оплата и доставка</a>
     </li>
   </ul>
 
-  <h2 class="font-medium text-[#212121] text-[25.6px] sm:mb-[24px]">Оплата и доставка</h2>
+  <h2 class="font-medium text-[#212121] text-[32px] sm:mb-[30px]">Оплата и доставка</h2>
 
 
   <div class="">
-    <div class="w-full mx-auto mt-[24px] mb-[24px] ">
+    <div class="w-full mx-auto mt-[30px] mb-[30px] ">
       <!-- Tabs -->
-      <div class="flex gap-2 max-[613.6px]:overflow-x-auto " 
+      <div class="flex gap-2 max-[767px]:overflow-x-auto " 
       style="scrollbar-width: none; -ms-overflow-style: none;">
         <button
             class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all border border-transparent bg-[#009FFF] text-[#fff]"
@@ -73,96 +73,96 @@
       </div>
 
       <!-- Content -->
-      <div class="mt-[24px] space-y-4 max-w-[1040px] w-full" style="scrollbar-width: none; -ms-overflow-style: none;">
+      <div class="mt-[30px] space-y-4 max-w-[1300px] w-full" style="scrollbar-width: none; -ms-overflow-style: none;">
         <div class="tab-content overflow-hidden" id="tab1">
-            <div class="flex border-b-2 max-w-[480px] max-[613.6px]:overflow-x-auto
-             mb-[25.6px]" style="border-color: #F0F0F0; scrollbar-width: none; -ms-overflow-style: none;">
-                <div class="mr-[9.6px] max-[613.6px]:whitespace-nowrap text-[#009FFF] text-[12.8px] pb-[4.8px] border-b-2 "
+            <div class="flex border-b-2 max-w-[600px] max-[767px]:overflow-x-auto
+             mb-[32px]" style="border-color: #F0F0F0; scrollbar-width: none; -ms-overflow-style: none;">
+                <div class="mr-[16px] max-[767px]:whitespace-nowrap text-[#009FFF] text-[16px] pb-[6px] border-b-2 "
                 style="border-color: #009FFF;">Санкт-Петербург</div>
-                <div class="mr-[9.6px] max-[613.6px]:whitespace-nowrap text-[#323232] text-[12.8px] pb-[4.8px] border-b-2 "
+                <div class="mr-[16px] max-[767px]:whitespace-nowrap text-[#323232] text-[16px] pb-[6px] border-b-2 "
                 style="border-color: transparent;">Регионы</div>
-                <div class="mr-[9.6px] max-[613.6px]:whitespace-nowrap text-[#323232] text-[12.8px] pb-[4.8px] border-b-2 "
+                <div class="mr-[16px] max-[767px]:whitespace-nowrap text-[#323232] text-[16px] pb-[6px] border-b-2 "
                 style="border-color: transparent;">Как сделать заказ</div>
-                <div class="text-[#323232] max-[613.6px]:whitespace-nowrap text-[12.8px] pb-[4.8px] border-b-2 "
+                <div class="text-[#323232] max-[767px]:whitespace-nowrap text-[16px] pb-[6px] border-b-2 "
                 style="border-color: transparent;">Срок хранения заказа</div>
             </div>
-            <div class="max-[613.6px]:overflow-x-hidden">
-              <h4 class="mb-[12.8px] text-[19.2px] text-[#323232] font-medium">Доставка и самовывоз</h4>
-            <b class="text-[#323232] block font-bold mb-[6.4px] text-[12.8px]">Условия самовывоза в СПб</b>
-            <p class="text-[#323232] text-[12.8px] mb-[16px] max-w-[544px]">
+            <div class="max-[767px]:overflow-x-hidden">
+              <h4 class="mb-[16px] text-[24px] text-[#323232] font-medium">Доставка и самовывоз</h4>
+            <b class="text-[#323232] block font-bold mb-[8px] text-[16px]">Условия самовывоза в СПб</b>
+            <p class="text-[#323232] text-[16px] mb-[20px] max-w-[680px]">
                 В случае самовывоза можно воспользоваться одним из двух пунктов,
                  которые по совместительству представляют собой наши стационарные
                   магазины. Найти их адреса и кратчайшие маршруты к ним 
                   <a href="#" class="text-[#009FFF]">можно здесь.</a>
             </p>
-            <b class="text-[#323232] block font-bold mb-[6.4px] text-[12.8px]">Курьерская доставка в СПб</b>
-            <p class="text-[#323232] text-[12.8px] mb-[16px] max-w-[544px]">
+            <b class="text-[#323232] block font-bold mb-[8px] text-[16px]">Курьерская доставка в СПб</b>
+            <p class="text-[#323232] text-[16px] mb-[20px] max-w-[680px]">
                 В стандартных условиях доставка выполняется через день после 
                 оформления заказа. Если предварительно оговорить вопрос с менеджером,
                  то отправка может быть выполнена на следующий день.
             </p>
-            <p class="text-[#323232] text-[12.8px] mb-[16px] max-w-[544px]">
+            <p class="text-[#323232] text-[16px] mb-[20px] max-w-[680px]">
                 При покупке:
             </p>
-            <ul class="list-disc pl-[16px] mb-[16px]">
+            <ul class="list-disc pl-[20px] mb-[20px]">
                 <li>до 5 000 руб. стоимость доставки 300 руб.</li>
                 <li>от 5 000 руб. доставка осуществляется бесплатно</li>
             </ul>
-            <p class="text-[#323232] text-[12.8px] mb-[16px] max-w-[544px]">
+            <p class="text-[#323232] text-[16px] mb-[20px] max-w-[680px]">
                 Эти условия касаются всего города в пределах КАД за исключением Кронштадт,
                  Сестрорецк, Стрельна, Всеволожск, Колпино, Пушкин, Мурино. Относительно этих
                   районов условия оговариваются в индивидуальном порядке.
             </p>
-            <b class="text-[#323232] block font-bold mb-[6.4px] text-[12.8px]">Доставка в Регионы РФ</b>
-            <p class="text-[#323232] text-[12.8px] mb-[16px] max-w-[544px]">
+            <b class="text-[#323232] block font-bold mb-[8px] text-[16px]">Доставка в Регионы РФ</b>
+            <p class="text-[#323232] text-[16px] mb-[20px] max-w-[680px]">
                 Доставка осуществляется
             </p>
-            <ul class="list-disc pl-[16px]">
+            <ul class="list-disc pl-[20px]">
                 <li>СДЭК</li>
                 <li>Почта России</li>
                 <li>EMS</li>
             </ul>
-            <h4 class="my-[24px] text-[19.2px] text-[#323232] font-medium">Как совершить покупку</h4>
-            <div class="flex max-[613.6px]:flex-wrap">
-                <div class="mr-[9.6px] max-[613.6px]:mr-[0] max-[613.6px]:mb-[16px] max-w-[136px] flex flex-col max-[613.6px]:w-[39.2%] max-[613.6px]:max-w-[80%] items-center">
-                    <div class="relative w-[80px] h-[80px] rounded-[40%] mb-[9.6px] flex" style="background: rgba(0, 159, 255, 0.10)">
-                        <span class="m-[auto] text-[#009FFF] text-[25.6px]">1</span>
-                        <span class="absolute left-[-4px] bottom-[-4px] w-[25.6px] h-[25.6px] bg-[#009FFF] rounded-[40%] flex">
-                            <img src="img/purchase-icon1.svg" alt="" class="m-[auto] w-[16px]">
+            <h4 class="my-[30px] text-[24px] text-[#323232] font-medium">Как совершить покупку</h4>
+            <div class="flex max-[767px]:flex-wrap">
+                <div class="mr-[12px] max-[767px]:mr-[0] max-[767px]:mb-[20px] max-w-[170px] flex flex-col max-[767px]:w-[49%] max-[767px]:max-w-[100%] items-center">
+                    <div class="relative w-[100px] h-[100px] rounded-[50%] mb-[12px] flex" style="background: rgba(0, 159, 255, 0.10)">
+                        <span class="m-[auto] text-[#009FFF] text-[32px]">1</span>
+                        <span class="absolute left-[-5px] bottom-[-5px] w-[32px] h-[32px] bg-[#009FFF] rounded-[50%] flex">
+                            <img src="img/purchase-icon1.svg" alt="" class="m-[auto] w-[20px]">
                         </span>
                     </div>
-                    <b class="block mb-[3.2px] text-[12.8px] text-center font-bold text-[#323232]">Оформите заказ</b>
-                    <span class="text-[11.2px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
+                    <b class="block mb-[4px] text-[16px] text-center font-bold text-[#323232]">Оформите заказ</b>
+                    <span class="text-[14px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
                 </div>
-                <div class="mr-[9.6px] max-[613.6px]:mr-[0] max-[613.6px]:mb-[16px] max-w-[136px] flex flex-col max-[613.6px]:w-[39.2%] max-[613.6px]:max-w-[80%] justify-center items-center">
-                    <div class="relative w-[80px] h-[80px] rounded-[40%] mb-[9.6px] flex" style="background: rgba(0, 159, 255, 0.10)">
-                        <span class="m-[auto] text-[#009FFF] text-[25.6px]">2</span>
-                        <span class="absolute left-[-4px] bottom-[-4px] w-[25.6px] h-[25.6px] bg-[#009FFF] rounded-[40%] flex">
-                            <img src="img/purchase-icon2.svg" alt="" class="m-[auto] w-[16px]">
+                <div class="mr-[12px] max-[767px]:mr-[0] max-[767px]:mb-[20px] max-w-[170px] flex flex-col max-[767px]:w-[49%] max-[767px]:max-w-[100%] justify-center items-center">
+                    <div class="relative w-[100px] h-[100px] rounded-[50%] mb-[12px] flex" style="background: rgba(0, 159, 255, 0.10)">
+                        <span class="m-[auto] text-[#009FFF] text-[32px]">2</span>
+                        <span class="absolute left-[-5px] bottom-[-5px] w-[32px] h-[32px] bg-[#009FFF] rounded-[50%] flex">
+                            <img src="img/purchase-icon2.svg" alt="" class="m-[auto] w-[20px]">
                         </span>
                     </div>
-                    <b class="block mb-[3.2px] text-[12.8px] text-center font-bold text-[#323232]">Дождитесь подтверждения</b>
-                    <span class="text-[11.2px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
+                    <b class="block mb-[4px] text-[16px] text-center font-bold text-[#323232]">Дождитесь подтверждения</b>
+                    <span class="text-[14px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
                 </div>
-                <div class="mr-[9.6px] max-[613.6px]:mr-[0] max-[613.6px]:mb-[16px] max-w-[136px] flex flex-col max-[613.6px]:w-[39.2%] max-[613.6px]:max-w-[80%] justify-center items-center">
-                    <div class="relative w-[80px] h-[80px] rounded-[40%] mb-[9.6px] flex" style="background: rgba(0, 159, 255, 0.10)">
-                        <span class="m-[auto] text-[#009FFF] text-[25.6px]">3</span>
-                        <span class="absolute left-[-4px] bottom-[-4px] w-[25.6px] h-[25.6px] bg-[#009FFF] rounded-[40%] flex">
-                            <img src="img/purchase-icon3.svg" alt="" class="m-[auto] w-[16px]">
+                <div class="mr-[12px] max-[767px]:mr-[0] max-[767px]:mb-[20px] max-w-[170px] flex flex-col max-[767px]:w-[49%] max-[767px]:max-w-[100%] justify-center items-center">
+                    <div class="relative w-[100px] h-[100px] rounded-[50%] mb-[12px] flex" style="background: rgba(0, 159, 255, 0.10)">
+                        <span class="m-[auto] text-[#009FFF] text-[32px]">3</span>
+                        <span class="absolute left-[-5px] bottom-[-5px] w-[32px] h-[32px] bg-[#009FFF] rounded-[50%] flex">
+                            <img src="img/purchase-icon3.svg" alt="" class="m-[auto] w-[20px]">
                         </span>
                     </div>
-                    <b class="block mb-[3.2px] text-[12.8px] text-center font-bold text-[#323232]">Ждите звонка курьера</b>
-                    <span class="text-[11.2px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
+                    <b class="block mb-[4px] text-[16px] text-center font-bold text-[#323232]">Ждите звонка курьера</b>
+                    <span class="text-[14px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
                 </div>
-                <div class="mr-[9.6px] max-[613.6px]:mr-[0] max-[613.6px]:mb-[16px] max-w-[136px] flex flex-col max-[613.6px]:w-[39.2%] max-[613.6px]:max-w-[80%] justify-center items-center">
-                    <div class="relative w-[80px] h-[80px] rounded-[40%] mb-[9.6px] flex" style="background: rgba(0, 159, 255, 0.10)">
-                        <span class="m-[auto] text-[#009FFF] text-[25.6px]">4</span>
-                        <span class="absolute left-[-4px] bottom-[-4px] w-[25.6px] h-[25.6px] bg-[#009FFF] rounded-[40%] flex">
-                            <img src="img/purchase-icon4.svg" alt="" class="m-[auto] w-[16px]">
+                <div class="mr-[12px] max-[767px]:mr-[0] max-[767px]:mb-[20px] max-w-[170px] flex flex-col max-[767px]:w-[49%] max-[767px]:max-w-[100%] justify-center items-center">
+                    <div class="relative w-[100px] h-[100px] rounded-[50%] mb-[12px] flex" style="background: rgba(0, 159, 255, 0.10)">
+                        <span class="m-[auto] text-[#009FFF] text-[32px]">4</span>
+                        <span class="absolute left-[-5px] bottom-[-5px] w-[32px] h-[32px] bg-[#009FFF] rounded-[50%] flex">
+                            <img src="img/purchase-icon4.svg" alt="" class="m-[auto] w-[20px]">
                         </span>
                     </div>
-                    <b class="block mb-[3.2px] text-[12.8px] text-center font-bold text-[#323232]">Получите ваше заказ</b>
-                    <span class="text-[11.2px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
+                    <b class="block mb-[4px] text-[16px] text-center font-bold text-[#323232]">Получите ваше заказ</b>
+                    <span class="text-[14px] text-[#6E6E6E] text-center">через сайт, приложение или по телефону</span>
                 </div>
             </div>
             </div>
