--- a/profile-user-info.html
+++ b/profile-user-info.html
@@ -24,30 +24,30 @@
 
   <ul class="flex-js-c gap-1 mb-10">
     <li>
-      <a href="home.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Личный кабинет</a>
+      <a href="catalog.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Личный кабинет</a>
     </li>
   </ul>
 
 
   <div class="w-full mt-6">
 
-    <div class="w-full grid grid-cols-12 gap-[24px]">
-      <div class="col-span-3 max-[819.2px]:hidden">
-        <div class="w-full border-r pr-[24px]">
-          <h4 class="text-[14.4px] font-medium">Здравствуйте,</h4>
-          <h5 class="text-[25.6px] font-medium pl-4">Сергей</h5>
+    <div class="w-full grid grid-cols-12 gap-[30px]">
+      <div class="col-span-3 max-[1024px]:hidden">
+        <div class="w-full border-r pr-[30px]">
+          <h4 class=" font-medium">Здравствуйте,</h4>
+          <h5 class="text-[32px] font-medium pl-4">Сергей</h5>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M6 18.584C7.569 17.059 9.692 16.121 12.023 16.121C14.331 16.121 16.431 17.04 18 18.537C16.431 20.062 14.308 21 11.977 21C9.669 21 7.569 20.081 6 18.584Z" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M3.975 16.025C3.365 14.811 3 13.452 3 12C3 7.026 7.026 3 12 3C16.974 3 21 7.026 21 12C21 13.45 20.637 14.81 20.023 16.023" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -57,7 +57,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9 22H15C20 22 22 20 22 15V9C22 4 20 2 15 2H9C4 2 2 4 2 9V15C2 20 4 22 9 22Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M6.69922 9.26001L11.9992 12.33L17.2592 9.28001" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -69,7 +69,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.17038 15.3L8.70038 19.83C10.5604 21.69 13.5804 21.69 15.4504 19.83L19.8404 15.44C21.7004 13.58 21.7004 10.56 19.8404 8.69005L15.3004 4.17005C14.3504 3.22005 13.0404 2.71005 11.7004 2.78005L6.70038 3.02005C4.70038 3.11005 3.11038 4.70005 3.01038 6.69005L2.77038 11.69C2.71038 13.04 3.22038 14.35 4.17038 15.3Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9.5 12.0001C10.8807 12.0001 12 10.8808 12 9.50006C12 8.11935 10.8807 7.00006 9.5 7.00006C8.11929 7.00006 7 8.11935 7 9.50006C7 10.8808 8.11929 12.0001 9.5 12.0001Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round"/>
@@ -79,7 +79,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.73 19.7C7.55 18.82 8.8 18.89 9.52 19.85L10.53 21.2C11.34 22.27 12.65 22.27 13.46 21.2L14.47 19.85C15.19 18.89 16.44 18.82 17.26 19.7C19.04 21.6 20.49 20.97 20.49 18.31V7.04C20.5 3.01 19.56 2 15.78 2H8.22C4.44 2 3.5 3.01 3.5 7.04V18.3C3.5 20.97 4.96 21.59 6.73 19.7Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9 13L15 7" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -91,7 +91,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_2038_17516)">
                     <path d="M5.6374 18.364C9.15212 21.8787 14.8506 21.8787 18.3653 18.364C21.88 14.8492 21.88 9.15076 18.3653 5.63604C14.8506 2.12132 9.15212 2.12132 5.6374 5.63604C3.87891 7.39453 3.00023 9.69966 3.00136 12.0044L3.00134 14" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M12 5.711C12.689 4.905 13.881 4 15.696 4C18.871 4 21 6.98 21 9.755C21 15.556 13.778 20 12 20C10.222 20 3 15.556 3 9.755C3 6.98 5.129 4 8.304 4C10.119 4 11.311 4.905 12 5.711Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -118,7 +118,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M14.3359 20L14.3359 8L18.0053 8C18.5576 8 19.0059 8.448 19.0059 9L19.0059 20L14.3359 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M9.66797 20L9.66797 4.88889C9.66797 4.39822 10.1163 4 10.6686 4L13.3373 4C13.8897 4 14.338 4.39822 14.338 4.88889L14.338 20L9.66797 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -130,11 +130,11 @@
             </li>
           </ul>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] flex-js-c gap-3 px-4 rounded-[6.4px] ">
+              <a href="#" class="w-full h-[48px] flex-js-c gap-3 px-4 rounded-[8px] ">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8.89844 7.55999C9.20844 3.95999 11.0584 2.48999 15.1084 2.48999H15.2384C19.7084 2.48999 21.4984 4.27999 21.4984 8.74999V15.27C21.4984 19.74 19.7084 21.53 15.2384 21.53H15.1084C11.0884 21.53 9.23844 20.08 8.90844 16.54" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M15.0011 12H3.62109" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -149,27 +149,27 @@
         </div>
       </div>
 
-      <form action="#" class="col-span-9 max-[613.6px]:col-span-12">
+      <form action="#" class="col-span-9 max-[767px]:col-span-12">
 
-        <div class="flex-js-c pb-5 max-[460.8px]:border-b gap-4">
-          <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-180 opacity-80 max-[460.8px]:block hidden" width="10">
-          <h1 class="text-[25.6px] font-medium">Мои данные</h1>
+        <div class="flex-js-c pb-5 max-[576px]:border-b gap-4">
+          <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-180 opacity-80 max-[576px]:block hidden" width="10">
+          <h1 class="text-[32px] font-medium">Мои данные</h1>
         </div>
-        <h4 class="text-[19.2px] font-medium mb-4 mt-5">Личная информация</h4>
+        <h4 class="text-[24px] font-medium mb-4 mt-5">Личная информация</h4>
 
-        <div class="w-full lg:max-w-[536px] mb-[36px] max-[613.6px]:max-w-[80%]">
-          <div class="w-full grid grid-cols-2  gap-x-[24px] gap-y-4 max-[613.6px]:grid-cols-1">
+        <div class="w-full lg:max-w-[670px] mb-[45px] max-[767px]:max-w-[100%]">
+          <div class="w-full grid grid-cols-2  gap-x-[30px] gap-y-4 max-[767px]:grid-cols-1">
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Ваше имя</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Введите имя">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите имя">
             </label>
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Фамилия</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Введите фамилию">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите фамилию">
             </label>
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Дата рождения</span>
-              <input type="date" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="16.10.1996">
+              <input type="date" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="16.10.1996">
             </label>
 
             <div class="w-full">
@@ -178,13 +178,13 @@
               <div class="flex-js-c gap-6">
                 <label class="w-full flex-js-c gap-3">
                   <input type="radio" name="gender" class="peer hidden">
-                  <span class="min-w-[14.4px] w-[14.4px] h-[14.4px] block transition border-[1.6px] border-[#DBDBDB] rounded-full peer-checked:border-[4px] peer-checked:border-[#009FFF]"></span>
+                  <span class="min-w-[18px] w-[18px] h-[18px] block transition border-[2px] border-[#DBDBDB] rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
 
                   Мужской
                 </label>
                 <label class="w-full flex-js-c gap-3">
                   <input type="radio" name="gender" class="peer hidden">
-                  <span class="min-w-[14.4px] w-[14.4px] h-[14.4px] block transition border-[1.6px] border-[#DBDBDB] rounded-full peer-checked:border-[4px] peer-checked:border-[#009FFF]"></span>
+                  <span class="min-w-[18px] w-[18px] h-[18px] block transition border-[2px] border-[#DBDBDB] rounded-full peer-checked:border-[5px] peer-checked:border-[#009FFF]"></span>
 
                   Женский
                 </label>
@@ -194,62 +194,62 @@
 
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Электронная почта</span>
-              <input type="email" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Primer@mail.ru">
+              <input type="email" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Primer@mail.ru">
             </label>
 
           </div>
         </div>
 
-        <h4 class="text-[19.2px] font-medium mb-[24px]">Адрес</h4>
+        <h4 class="text-[24px] font-medium mb-[30px]">Адрес</h4>
 
-        <div class="w-full lg:max-w-[536px] mb-[36px]">
-          <div class="w-full grid grid-cols-2 gap-x-[24px] gap-y-4 max-[613.6px]:block ">
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+        <div class="w-full lg:max-w-[670px] mb-[45px]">
+          <div class="w-full grid grid-cols-2 gap-x-[30px] gap-y-4 max-[767px]:block ">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Город</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Санкт-Петербург">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Санкт-Петербург">
             </label>
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Город</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Индекс*">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Индекс*">
             </label>
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block col-span-2">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block col-span-2">
               <span class="block text-[#323232] mb-1">Улица</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Введите улицу">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите улицу">
             </label>
 
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Номер квартиры</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Введите номер">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите номер">
             </label>
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Этаж</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Введите этаж">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Введите этаж">
             </label>
 
           </div>
         </div>
 
-        <h4 class="text-[19.2px] font-medium mb-[24px]">Безопасность и пароль</h4>
+        <h4 class="text-[24px] font-medium mb-[30px]">Безопасность и пароль</h4>
 
-        <div class="w-full lg:max-w-[536px] mb-[24px]">
-          <div class="w-full grid grid-cols-2 gap-x-[24px] gap-y-4 max-[613.6px]:block">
-            <label class="w-full col-span-2 max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+        <div class="w-full lg:max-w-[670px] mb-[30px]">
+          <div class="w-full grid grid-cols-2 gap-x-[30px] gap-y-4 max-[767px]:block">
+            <label class="w-full col-span-2 max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Пароль</span>
-              <input type="password" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="*********">
+              <input type="password" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="*********">
             </label>
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Новый пароль</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="*********">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="*********">
             </label>
-            <label class="w-full max-[613.6px]:mb-[9.6px] max-[613.6px]:block">
+            <label class="w-full max-[767px]:mb-[12px] max-[767px]:block">
               <span class="block text-[#323232] mb-1">Новый пароль повторно</span>
-              <input type="text" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="*********">
+              <input type="text" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="*********">
             </label>
           </div>
         </div>
 
-        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 min-w-[169.6px]
-         transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2 max-[613.6px]:max-w-[80%] max-[613.6px]:w-full">
+        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 min-w-[212px]
+         transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 max-[767px]:max-w-[100%] max-[767px]:w-full">
           Сохранить
         </button>
 
