--- a/basket.html
+++ b/basket.html
@@ -23,25 +23,25 @@
 
 <div class="container w-full mt-6">
 
-  <ul class="flex-js-c gap-1 mb-10 max-[490.9px]:mb-[12.8px]">
+  <ul class="flex-js-c gap-1 mb-10 max-[767px]:mb-[20px]">
     <li>
-      <a href="home.html" class="text-[11.5px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[16px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[11.5px] text-[#6E6E6E]">
+    <li class="text-[18px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[11.5px] text-[#6E6E6E] hover:text-blue">Корзина</a>
+      <a href="catalog.html" class="text-[16px] text-[#6E6E6E] hover:text-blue">Корзина</a>
     </li>
   </ul>
 
 
-  <div class="w-full mt-6 max-[490.9px]:mt-[6.4px]">
-    <h1 class="text-[20.5px] font-medium mb-[19.2px] tracking-[-0.4px]">Корзина</h1>
+  <div class="w-full mt-6 max-[767px]:mt-[10px]">
+    <h1 class="text-[32px] font-medium mb-[30px] tracking-[-0.64px]">Корзина</h1>
 
-    <div class="w-full grid grid-cols-12 gap-[88.3px] max-[1024px]:gap-[32px] max-[896px]:flex max-[896px]:flex-col">
+    <div class="w-full grid grid-cols-12 gap-[138px] max-[1600px]:gap-[50px] max-[1400px]:flex max-[1400px]:flex-col">
       <div class="col-span-8">
-        <div class="flex-js-c gap-6 pb-5 border-b max-[490.9px]:flex-col max-[490.9px]:items-start max-[490.9px]:gap-[6.4px]">
+        <div class="flex-js-c gap-6 pb-5 border-b max-[767px]:flex-col max-[767px]:items-start max-[767px]:gap-[10px]">
           <label class="def-checkbox flex-js-c order-2 sm:order-2">
             <input type="checkbox">
             <span class="mr-2"></span>
@@ -60,87 +60,87 @@
         </div>
 
         <div class="w-full">
-          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[490.9px]:relative max-[490.9px]:pb-[12.8px]">
-            <div class="col-span-6 md:col-span-3">
+          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[767px]:relative max-[767px]:pb-[20px]">
+            <div class="col-span-6 md:col-span-2">
               <div class="w-full flex-js-s gap-1">
                 <label class="def-checkbox flex-js-c">
                   <input type="checkbox">
                   <span class="mr-2"></span>
                 </label>
 
-                <div class="w-[74.2px] h-[61.4px] flex-jc-c border rounded-[2.6px]">
-                  <img src="img/products/product2.png" alt="product image" class="w-[44.8%]">
+                <div class="w-[116px] h-[96px] flex-jc-c border rounded-[4px]">
+                  <img src="img/products/product2.png" alt="product image" class="w-[70%]">
                 </div>
               </div>
             </div>
 
-            <div class="col-span-6 md:col-span-3">
-              <h3 class="text-[11.5px] w-full max-w-[160px] leading-[76.8%] max-[490.9px]:text-[10.2px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
+            <div class="col-span-6 md:col-span-4">
+              <h3 class="w-full max-w-[250px] leading-[120%]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
               <div class="flex-js-c gap-2 mt-2">
-                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   <img src="img/icons/heard-gray.svg" alt="">
                 </button>
-                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   <img src="img/icons/rating-gray.svg" alt="">
                 </button>
               </div>
             </div>
 
 
-            <div class="col-span-6 md:col-span-4 max-[491.5px]:pl-9 mt-[-3.2px]">
+            <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px]">
 
-              <h3 class="text-[11.5px] text-[#212121]">2 100 ₽</h3>
+              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
-                <span class="text-white px-2 text-[8.3px] bg-[#16B34B] rounded-[2.6px]">-15%</span>
+                <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
               </div>
             </div>
 
             <div class="col-span-6 md:col-span-2 flex-je-s">
               <div class="flex-jsb-c gap-2">
-                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   -
                 </button>
                 <span class="mx-2">1</span>
-                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   +
                 </button>
               </div>
             </div>
 
           </div>
-          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[490.9px]:relative max-[490.9px]:pb-[12.8px]">
-            <div class="col-span-6 md:col-span-3">
+          <div class="w-full grid grid-cols-12 gap-5 mt-5 pb-5 border-b max-[767px]:relative max-[767px]:pb-[20px]">
+            <div class="col-span-6 md:col-span-2">
               <div class="w-full flex-js-s gap-1">
                 <label class="def-checkbox flex-js-c">
                   <input type="checkbox">
                   <span class="mr-2"></span>
                 </label>
 
-                <div class="w-[74.2px] h-[61.4px] flex-jc-c border rounded-[2.6px]">
-                  <img src="img/products/product2.png" alt="product image" class="w-[44.8%]">
+                <div class="w-[116px] h-[96px] flex-jc-c border rounded-[4px]">
+                  <img src="img/products/product2.png" alt="product image" class="w-[70%]">
                 </div>
               </div>
             </div>
 
-            <div class="col-span-6 md:col-span-3">
-              <h3 class="text-[11.5px] w-full max-w-[160px] leading-[76.8%] max-[490.9px]:text-[10.2px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
+            <div class="col-span-6 md:col-span-4">
+              <h3 class="w-full max-w-[250px] leading-[120%]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
               <div class="flex-js-c gap-2 mt-2">
-                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   <img src="img/icons/heard-gray.svg" alt="">
                 </button>
-                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-10 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   <img src="img/icons/rating-gray.svg" alt="">
                 </button>
               </div>
             </div>
 
 
-            <div class="col-span-6 md:col-span-4 max-[491.5px]:pl-9 mt-[-3.2px]">
-              <h3 class="text-[11.5px] text-[#212121]">2 100 ₽</h3>
+            <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px]">
+              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
               <div class="flex-js-c gap-2">
                 <h4 class="text-[#CF301B] line-through">300 ₽</h4>
-                <span class="text-white px-2 text-[8.3px] bg-[#16B34B] rounded-[2.6px]">-15%</span>
+                <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
               </div>
 
 
@@ -148,11 +148,11 @@
 
             <div class="col-span-6 md:col-span-2 flex-je-s">
               <div class="flex-jsb-c gap-2">
-                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   -
                 </button>
                 <span class="mx-2">1</span>
-                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[5.1px] flex-jc-c">
+                <button class="w-8 h-8 bg-[#6E6E6E1A] rounded-[8px] flex-jc-c">
                   +
                 </button>
               </div>
@@ -163,25 +163,25 @@
       </div>
 
       <div class="col-span-4">
-        <div class="w-full bg-[#F4F4F4] rounded-[15.4px] p-10 max-[490.9px]:p-[12.8px]">
+        <div class="w-full bg-[#F4F4F4] rounded-[24px] p-10 max-[767px]:p-[20px]">
           <h3 class="text-[#212121] font-semibold mb-6">Сумма заказа</h3>
 
           <ul class="w-full border-b pb-4">
             <li class="w-fill flex-jsb-c">
-              <span class="text-[11.5px]">1 товар</span>
-              <span class="text-[11.5px] text-[#6E6E6E]">2 100 ₽</span>
+              <span>1 товар</span>
+              <span class="ext-[#6E6E6E]">2 100 ₽</span>
             </li>
             <li class="w-fill flex-jsb-c">
-              <span class="text-[11.5px] text-[#CF301B]">Скидка 15%</span>
-              <span class="text-[11.5px] text-[#CF301B]">-300 ₽</span>
+              <span class="text-[#CF301B]">Скидка 15%</span>
+              <span class="text-[#CF301B]">-300 ₽</span>
             </li>
             <li class="w-fill flex-jsb-c mt-2">
-              <span class="text-[11.5px]">1 товар</span>
-              <span class="text-[11.5px] text-[#6E6E6E]">2 100 ₽</span>
+              <span>1 товар</span>
+              <span class="text-[#6E6E6E]">2 100 ₽</span>
             </li>
             <li class="w-fill flex-jsb-c mt-2">
-              <span class="text-[11.5px]">Начислим за заказ</span>
-              <span class="text-[11.5px] text-[#6E6E6E] flex-je-c">
+              <span>Начислим за заказ</span>
+              <span class="text-[#6E6E6E] flex-je-c">
                +555
                <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo" class="ml-1">
              </span>
@@ -195,10 +195,10 @@
             </div>
 
             <form action="#" class="w-full mt-4 flex-jsb-c gap-2">
-              <input type="text" class="w-full h-[34.6px] border border-[#6E6E6E40] pl-2 rounded-[5.1px]"
+              <input type="text" class="w-full h-[54px] border border-[#6E6E6E40] pl-2 rounded-[8px]"
                      placeholder="Введите промокод">
 
-              <button class="bg-[#212121] h-[34.6px] !bg-transparent border-[1.3px] border-[#009FFF] px-4 rounded-[5.1px]">
+              <button class="bg-[#212121] h-[54px] !bg-transparent border-[2px] border-[#009FFF] px-4 rounded-[8px]">
                 Применить
               </button>
 
@@ -212,8 +212,8 @@
               <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-[-90deg]">
             </div>
 
-            <div class="w-full bg-white rounded-[7.7px] p-4">
-              <p class="text-[#6E6E6E] leading-[9.6px]">На вашем счете 5 300 бонусов. Для оплаты заказа доступно 800 бонусов</p>
+            <div class="w-full bg-white rounded-[12px] p-4">
+              <p class="text-[#6E6E6E] leading-[15px]">На вашем счете 5 300 бонусов. Для оплаты заказа доступно 800 бонусов</p>
 
               <div class="w-full flex-jsb-c mt-2">
                 <b>Списать бонусы: 800</b>
@@ -229,12 +229,12 @@
 
 
           <div class="w-full mt-4 flex-jsb-s">
-            <h4 class="text-[15.4px]">Итого:</h4>
-            <h4 class="text-[15.4px]">1 800 ₽</h4>
+            <h4 class="text-[24px]">Итого:</h4>
+            <h4 class="text-[24px]">1 800 ₽</h4>
           </div>
           <p class="text-[#6E6E6E]">Без учета возможной стоимости доставки</p>
 
-          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[34.6px] px-6 rounded-[5.1px] text-white font-bold flex-jc-c gap-2 mt-6">
+          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 w-full transition h-[54px] px-6 rounded-[8px] text-white font-bold flex-jc-c gap-2 mt-6">
             К оформлению, 1 товар
           </button>
         </div>
