--- a/contact.html
+++ b/contact.html
@@ -28,40 +28,40 @@
 
   <ul class="flex-js-c gap-1 mb-7">
     <li>
-      <a href="home.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class=" text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[14.4px] text-[#6E6E6E] hover:text-blue">Контакты</a>
+      <a href="catalog.html" class=" text-[#6E6E6E] hover:text-blue">Контакты</a>
     </li>
   </ul>
 
-  <h1 class="text-[25.6px] font-medium mb-5 tracking-[-0.5px]">Контакты</h1>
+  <h1 class="text-[32px] font-medium mb-5 tracking-[-0.64px]">Контакты</h1>
 
 
-  <div class="w-full h-auto grid grid-cols-12 gap-10 align-center max-[1120px]:block">
+  <div class="w-full h-auto grid grid-cols-12 gap-10 align-center max-[1400px]:block">
     <div class="w-full col-span-12 md:col-span-7 lg:col-span-5">
       <table class="w-full">
         <tbody>
         <tr>
-          <td class="text-[14.4px] text-[#6E6E6E] hidden sm:block">
+          <td class=" text-[#6E6E6E] hidden sm:block">
             Адрес:
           </td>
-          <td class="text-[14.4px] sm:w-[240px] pb-3">
-            <h4 class="text-[14.4px] text-[#6E6E6E] block sm:hidden">
+          <td class=" sm:w-[300px] pb-3">
+            <h4 class=" text-[#6E6E6E] block sm:hidden">
               Адрес:
             </h4>
             г. Санкт-Петербург, набережная <br> Обводного Канала д.165
           </td>
         </tr>
         <tr>
-          <td class="text-[14.4px] text-[#6E6E6E] hidden sm:block">
+          <td class=" text-[#6E6E6E] hidden sm:block">
             Время работы:
           </td>
-          <td class="text-[14.4px] sm:w-[240px] pb-3">
-            <h4 class="text-[14.4px] text-[#6E6E6E] block sm:hidden">
+          <td class=" sm:w-[300px] pb-3">
+            <h4 class=" text-[#6E6E6E] block sm:hidden">
               Время работы:
             </h4>
             Пн-Сб с 10:00 до 20:00 <br>
@@ -69,22 +69,22 @@
           </td>
         </tr>
         <tr>
-          <td class="text-[14.4px] text-[#6E6E6E] hidden sm:block">
+          <td class=" text-[#6E6E6E] hidden sm:block">
             Электронная почта:
           </td>
-          <td class="text-[14.4px] sm:w-[240px] pb-3">
-            <h4 class="text-[14.4px] text-[#6E6E6E] block sm:hidden">
+          <td class=" sm:w-[300px] pb-3">
+            <h4 class=" text-[#6E6E6E] block sm:hidden">
               Электронная почта:
             </h4>
             <a href="mailto: fishemania@yandex.ru" class="underline text-[#CF301B]">fishemania@yandex.ru</a>
           </td>
         </tr>
         <tr>
-          <td class="text-[14.4px] text-[#6E6E6E] hidden sm:block">
+          <td class=" text-[#6E6E6E] hidden sm:block">
             Телефон:
           </td>
-          <td class="text-[14.4px] sm:w-[240px] pb-3">
-            <h4 class="text-[14.4px] text-[#6E6E6E] block sm:hidden">
+          <td class=" sm:w-[300px] pb-3">
+            <h4 class=" text-[#6E6E6E] block sm:hidden">
               Телефон:
             </h4>
             <a href="tel: 8 (921) 903-53-50">8 (921) 903-53-50</a>
@@ -93,11 +93,11 @@
           </td>
         </tr>
         <tr>
-          <td class="text-[14.4px] text-[#6E6E6E] hidden sm:block">
+          <td class=" text-[#6E6E6E] hidden sm:block">
             Реквизиты:
           </td>
-          <td class="text-[14.4px] sm:w-[280px] pb-3">
-            <h4 class="text-[14.4px] text-[#6E6E6E] block sm:hidden">
+          <td class=" sm:w-[350px] pb-3">
+            <h4 class=" text-[#6E6E6E] block sm:hidden">
               Реквизиты:
             </h4>
             ИП Андреева Катерина Александровна <br>
@@ -109,7 +109,7 @@
         </tbody>
       </table>
     </div>
-    <div class="w-full h-[464px] rounded-[19.2px] overflow-hidden col-span-12 md:col-span-5 lg:col-span-7 max-[1120px]:mt-[16px]">
+    <div class="w-full h-[580px] rounded-[24px] overflow-hidden col-span-12 md:col-span-5 lg:col-span-7 max-[1400px]:mt-[20px]">
       <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2017.4627935389778!2d37.598040100804646!3d55.754497286660424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sam!4v1753383209161!5m2!1sru!2sam"
           width="100%" height="580" style="border:0;" allowfullscreen="" loading="lazy"
