--- a/profile-featured.html
+++ b/profile-featured.html
@@ -24,30 +24,30 @@
 
   <ul class="flex-js-c gap-1 mb-10">
     <li>
-      <a href="home.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Регистрация и вход</a>
+      <a href="catalog.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Регистрация и вход</a>
     </li>
   </ul>
 
 
   <div class="w-full mt-6">
 
-    <div class="w-full grid grid-cols-12 gap-[24px]">
+    <div class="w-full grid grid-cols-12 gap-[30px]">
       <div class="col-span-3 hidden lg:block">
-        <div class="w-full border-r pr-[24px]">
-          <h4 class="text-[14.4px] font-medium">Здравствуйте,</h4>
-          <h5 class="text-[25.6px] font-medium pl-4">Сергей</h5>
+        <div class="w-full border-r pr-[30px]">
+          <h4 class=" font-medium">Здравствуйте,</h4>
+          <h5 class="text-[32px] font-medium pl-4">Сергей</h5>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M6 18.584C7.569 17.059 9.692 16.121 12.023 16.121C14.331 16.121 16.431 17.04 18 18.537C16.431 20.062 14.308 21 11.977 21C9.669 21 7.569 20.081 6 18.584Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M3.975 16.025C3.365 14.811 3 13.452 3 12C3 7.026 7.026 3 12 3C16.974 3 21 7.026 21 12C21 13.45 20.637 14.81 20.023 16.023" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -58,7 +58,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px] flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9 22H15C20 22 22 20 22 15V9C22 4 20 2 15 2H9C4 2 2 4 2 9V15C2 20 4 22 9 22Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M6.70312 9.26001L12.0031 12.33L17.2631 9.28001" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -70,7 +70,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.17038 15.3L8.70038 19.83C10.5604 21.69 13.5804 21.69 15.4504 19.83L19.8404 15.44C21.7004 13.58 21.7004 10.56 19.8404 8.69005L15.3004 4.17005C14.3504 3.22005 13.0404 2.71005 11.7004 2.78005L6.70038 3.02005C4.70038 3.11005 3.11038 4.70005 3.01038 6.69005L2.77038 11.69C2.71038 13.04 3.22038 14.35 4.17038 15.3Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9.5 12.0001C10.8807 12.0001 12 10.8808 12 9.50006C12 8.11935 10.8807 7.00006 9.5 7.00006C8.11929 7.00006 7 8.11935 7 9.50006C7 10.8808 8.11929 12.0001 9.5 12.0001Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round"/>
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.73 19.7C7.55 18.82 8.8 18.89 9.52 19.85L10.53 21.2C11.34 22.27 12.65 22.27 13.46 21.2L14.47 19.85C15.19 18.89 16.44 18.82 17.26 19.7C19.04 21.6 20.49 20.97 20.49 18.31V7.04C20.5 3.01 19.56 2 15.78 2H8.22C4.44 2 3.5 3.01 3.5 7.04V18.3C3.5 20.97 4.96 21.59 6.73 19.7Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9 13L15 7" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px] flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.6374 18.364C9.15212 21.8787 14.8506 21.8787 18.3653 18.364C21.88 14.8492 21.88 9.15076 18.3653 5.63604C14.8506 2.12132 9.15212 2.12132 5.6374 5.63604C3.87891 7.39453 3.00023 9.69966 3.00136 12.0044L3.00134 14" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M1 12L3 14L5 12" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M12 5.711C12.689 4.905 13.881 4 15.696 4C18.871 4 21 6.98 21 9.755C21 15.556 13.778 20 12 20C10.222 20 3 15.556 3 9.755C3 6.98 5.129 4 8.304 4C10.119 4 11.311 4.905 12 5.711Z" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M14.3359 20L14.3359 8L18.0053 8C18.5576 8 19.0059 8.448 19.0059 9L19.0059 20L14.3359 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M9.66797 20L9.66797 4.88889C9.66797 4.39822 10.1163 4 10.6686 4L13.3373 4C13.8897 4 14.338 4.39822 14.338 4.88889L14.338 20L9.66797 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -124,11 +124,11 @@
             </li>
           </ul>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] flex-js-c gap-3 px-4 rounded-[6.4px] ">
+              <a href="#" class="w-full h-[48px] flex-js-c gap-3 px-4 rounded-[8px] ">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8.89844 7.55999C9.20844 3.95999 11.0584 2.48999 15.1084 2.48999H15.2384C19.7084 2.48999 21.4984 4.27999 21.4984 8.74999V15.27C21.4984 19.74 19.7084 21.53 15.2384 21.53H15.1084C11.0884 21.53 9.23844 20.08 8.90844 16.54" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M15.0011 12H3.62109" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -145,14 +145,14 @@
 
       <div class="col-span-12 lg:col-span-9">
 
-        <div class="flex-js-c gap-4 mb-6 md:mb-[24px]">
+        <div class="flex-js-c gap-4 mb-6 md:mb-[30px]">
           <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-180 block md:hidden" width="10">
-          <h1 class="text-[19.2px] sm:text-[25.6px] font-medium">Избранное</h1>
+          <h1 class="text-[24px] sm:text-[32px] font-medium">Избранное</h1>
         </div>
 
         <hr class="mb-6  block md:hidden">
 
-        <div class="w-full bg-[#F4F4F4] rounded-[9.6px] px-4 flex-jsb-c sm:hidden h-[38.4px] mb-5" id="open-mobile-filter">
+        <div class="w-full bg-[#F4F4F4] rounded-[12px] px-4 flex-jsb-c sm:hidden h-[48px] mb-5" id="open-mobile-filter">
           <h4 class="font-semibold">Фильтр</h4>
           <img src="img/icons/arrow-right.svg" alt="right">
         </div>
@@ -162,7 +162,7 @@
             <div class="flex-js-c gap-4 text-[#6E6E6E]">
               Сортировать
 
-              <select class="bg-[#F4F4F4] border-none text-[#212121] rounded-[4.8px]">
+              <select class="bg-[#F4F4F4] border-none text-[#212121] rounded-[6px]">
                 <option value="Хиты продаж" selected>Хиты продаж</option>
                 <option value="Хиты продаж">Хиты продаж 1</option>
                 <option value="Хиты продаж">Хиты продаж 1</option>
@@ -175,13 +175,13 @@
               Показывать
 
               <div class="w-full h-auto flex-js-c gap-1 flex-wrap">
-                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[40px] cursor-default text-[#6E6E6E]">
+                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E]">
                   Акции
                 </button>
-                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[40px] cursor-default text-[#6E6E6E]">
+                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E]">
                   Новинки
                 </button>
-                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[40px] cursor-default text-[#6E6E6E]">
+                <button class="flex-jc-c gap-1 px-3 h-10 border  rounded-[50px] cursor-default text-[#6E6E6E]">
                   Хиты
                 </button>
               </div>
@@ -190,71 +190,9 @@
           </div>
         </div>
 
-        <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-[24px] mt-[24px]">
+        <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-[30px] mt-[30px]">
           <div data-for="5" class="w-full">
-            <div class="w-full h-[341.6px] border rounded-[12.8px] relative">
-              <div class="absolute top-2 right-2 flex-je-c gap-2 z-10">
-                <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-                  <img src="img/icons/heard-gray.svg" alt="heard-gray">
-                </div>
-                <div class="w-[32px] h-[25.6px] flex-jc-c bg-black/10 rounded-[6.4px] cursor-pointer">
-                  <img src="img/icons/rating-gray.svg" alt="rating-gray">
-                </div>
-              </div>
-
-              <div class="swiper swiperProductItems h-full relative">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide px-6 flex-jc-c">
-                    <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                  </div>
-                  <div class="swiper-slide px-6 flex-jc-c">
-                    <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                  </div>
-                  <div class="swiper-slide px-6 flex-jc-c">
-                    <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-                  </div>
-                </div>
-                <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-              </div>
-
-
-            </div>
-            <div class="w-full p-4">
-              <div class="flex-jsb-c">
-                <div class="flex-js-c text-[#6E6E6E] gap-[4px]">
-                  <img src="img/icons/star-yellow.svg" alt="star-yellow">
-                  4.2
-                  <span class="min-w-[3.2px] max-w-[3.2px] w-[3.2px] h-[3.2px] rounded-full bg-[#6E6E6E] mx-1"></span>
-                  29 отзывов
-                </div>
-                <span class="text-[#6E6E6E] hidden">арт. 234 345</span>
-              </div>
-
-              <h3 class="text-[14.4px] text-[#212121] mt-1 tracking-[-0.1px] leading-[19.2px] h-[57.6px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
-
-
-              <div class="flex-js-c gap-2 text-[#707070] hidden">
-                Производитель
-                <span class="text-[#323232] font-bold">Daiwa</span>
-              </div>
-
-
-              <div class="flex-js-c gap-1 mt-2">
-                <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[11.2px] text-[#CF301B] font-bold">+555 Кешбэк</span>
-              </div>
-
-
-              <div class="flex-jsb-c mt-2">
-                <h4 class="text-[19.2px] font-semibold">3 200 ₽</h4>
-                <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[43.2px] px-6 rounded-[6.4px] text-white text-nowrap font-bold flex-jc-c gap-2">
-                  В корзину
-                  <img src="img/icons/basket-white.svg" alt="">
-                </button>
-              </div>
-
-
-            </div>
+            <component src="./components/product-card.html"></component>
           </div>
         </div>
 
