--- a/profile-orders.html
+++ b/profile-orders.html
@@ -25,30 +25,30 @@
 
   <ul class="flex-js-c gap-1 mb-10">
     <li>
-      <a href="home.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Главная</a>
+      <a href="home.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[14.4px] text-[#6E6E6E]">
+    <li class=" text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[11.2px] sm:text-[14.4px] text-[#6E6E6E] hover:text-blue">Регистрация и вход</a>
+      <a href="catalog.html" class="text-[14px] sm: text-[#6E6E6E] hover:text-blue">Регистрация и вход</a>
     </li>
   </ul>
 
 
   <div class="w-full mt-6">
 
-    <div class="w-full grid grid-cols-12 gap-[24px]">
+    <div class="w-full grid grid-cols-12 gap-[30px]">
       <div class="col-span-3 hidden lg:block">
-        <div class="w-full border-r pr-[24px]">
-          <h4 class="text-[14.4px] font-medium">Здравствуйте,</h4>
-          <h5 class="text-[25.6px] font-medium pl-4">Сергей</h5>
+        <div class="w-full border-r pr-[30px]">
+          <h4 class=" font-medium">Здравствуйте,</h4>
+          <h5 class="text-[32px] font-medium pl-4">Сергей</h5>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M6 18.584C7.569 17.059 9.692 16.121 12.023 16.121C14.331 16.121 16.431 17.04 18 18.537C16.431 20.062 14.308 21 11.977 21C9.669 21 7.569 20.081 6 18.584Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M3.975 16.025C3.365 14.811 3 13.452 3 12C3 7.026 7.026 3 12 3C16.974 3 21 7.026 21 12C21 13.45 20.637 14.81 20.023 16.023" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -59,7 +59,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px] bg-[#F4F4F4] text-blue flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9 22H15C20 22 22 20 22 15V9C22 4 20 2 15 2H9C4 2 2 4 2 9V15C2 20 4 22 9 22Z" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M6.70312 9.26001L12.0031 12.33L17.2631 9.28001" stroke="#009FFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -72,7 +72,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.17038 15.3L8.70038 19.83C10.5604 21.69 13.5804 21.69 15.4504 19.83L19.8404 15.44C21.7004 13.58 21.7004 10.56 19.8404 8.69005L15.3004 4.17005C14.3504 3.22005 13.0404 2.71005 11.7004 2.78005L6.70038 3.02005C4.70038 3.11005 3.11038 4.70005 3.01038 6.69005L2.77038 11.69C2.71038 13.04 3.22038 14.35 4.17038 15.3Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9.5 12.0001C10.8807 12.0001 12 10.8808 12 9.50006C12 8.11935 10.8807 7.00006 9.5 7.00006C8.11929 7.00006 7 8.11935 7 9.50006C7 10.8808 8.11929 12.0001 9.5 12.0001Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round"/>
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.73 19.7C7.55 18.82 8.8 18.89 9.52 19.85L10.53 21.2C11.34 22.27 12.65 22.27 13.46 21.2L14.47 19.85C15.19 18.89 16.44 18.82 17.26 19.7C19.04 21.6 20.49 20.97 20.49 18.31V7.04C20.5 3.01 19.56 2 15.78 2H8.22C4.44 2 3.5 3.01 3.5 7.04V18.3C3.5 20.97 4.96 21.59 6.73 19.7Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M9 13L15 7" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_2038_17516)">
                     <path d="M5.6374 18.364C9.15212 21.8787 14.8506 21.8787 18.3653 18.364C21.88 14.8492 21.88 9.15076 18.3653 5.63604C14.8506 2.12132 9.15212 2.12132 5.6374 5.63604C3.87891 7.39453 3.00023 9.69966 3.00136 12.0044L3.00134 14" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M12 5.711C12.689 4.905 13.881 4 15.696 4C18.871 4 21 6.98 21 9.755C21 15.556 13.778 20 12 20C10.222 20 3 15.556 3 9.755C3 6.98 5.129 4 8.304 4C10.119 4 11.311 4.905 12 5.711Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px]  flex-js-c gap-3 px-4 rounded-[6.4px] hover:bg-[#F4F4F4]/60">
+              <a href="#" class="w-full h-[48px]  flex-js-c gap-3 px-4 rounded-[8px] hover:bg-[#F4F4F4]/60">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M14.3359 20L14.3359 8L18.0053 8C18.5576 8 19.0059 8.448 19.0059 9L19.0059 20L14.3359 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M9.66797 20L9.66797 4.88889C9.66797 4.39822 10.1163 4 10.6686 4L13.3373 4C13.8897 4 14.338 4.39822 14.338 4.88889L14.338 20L9.66797 20Z" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -133,11 +133,11 @@
             </li>
           </ul>
 
-          <hr class="my-[24px]">
+          <hr class="my-[30px]">
 
           <ul class="w-full">
             <li class="w-full">
-              <a href="#" class="w-full h-[38.4px] flex-js-c gap-3 px-4 rounded-[6.4px] ">
+              <a href="#" class="w-full h-[48px] flex-js-c gap-3 px-4 rounded-[8px] ">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8.89844 7.55999C9.20844 3.95999 11.0584 2.48999 15.1084 2.48999H15.2384C19.7084 2.48999 21.4984 4.27999 21.4984 8.74999V15.27C21.4984 19.74 19.7084 21.53 15.2384 21.53H15.1084C11.0884 21.53 9.23844 20.08 8.90844 16.54" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M15.0011 12H3.62109" stroke="#323232" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -154,23 +154,23 @@
 
       <div class="col-span-12 lg:col-span-9">
 
-        <div class="flex-js-c gap-4 mb-6 md:mb-[24px]">
+        <div class="flex-js-c gap-4 mb-6 md:mb-[30px]">
           <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-180 block md:hidden" width="10">
-          <h1 class="text-[19.2px] sm:text-[25.6px] font-medium">Мои заказы</h1>
+          <h1 class="text-[24px] sm:text-[32px] font-medium">Мои заказы</h1>
         </div>
 
-        <div class="w-full lg:max-w-[536px] mb-[36px]">
-          <div class="w-full grid grid-cols-1 sm:grid-cols-2 gap-x-[24px] gap-y-4">
+        <div class="w-full lg:max-w-[670px] mb-[45px]">
+          <div class="w-full grid grid-cols-1 sm:grid-cols-2 gap-x-[30px] gap-y-4">
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Выбрать период</span>
-              <input type="date" class="w-full pl-2 h-[43.2px] rounded-[6.4px] border border-[#6E6E6E40]" placeholder="Выберите период">
+              <input type="date" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Выберите период">
             </label>
           </div>
         </div>
 
 
-        <div class="w-full grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-4 gap-[24px]">
-          <div data-for="5" class="w-full border p-4 rounded-[9.6px]">
+        <div class="w-full grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3 gap-[30px]">
+          <div data-for="5" class="w-full border p-4 rounded-[12px]">
             <ul class="mb-5">
               <li class="text-[#6E6E6E]">
                 Дата: <b class="text-black">12 апреля 2025</b>
@@ -189,27 +189,27 @@
             <b class="mb-1 block">Товары</b>
 
             <div class="w-full grid grid-cols-5 gap-1 mb-5">
-              <div class="w-full h-[40px] border hover:border-black transition rounded-[3.2px] flex-jc-c p-2 cursor-pointer overflow-hidden">
+              <div class="w-full h-[50px] border hover:border-black transition rounded-[4px] flex-jc-c p-2 cursor-pointer overflow-hidden">
                 <img src="img/products/product2.png" alt="" class="h-full">
               </div>
-              <div class="w-full h-[40px] border hover:border-black transition rounded-[3.2px] flex-jc-c p-2 cursor-pointer overflow-hidden">
+              <div class="w-full h-[50px] border hover:border-black transition rounded-[4px] flex-jc-c p-2 cursor-pointer overflow-hidden">
                 <img src="img/products/product2.png" alt="" class="h-full">
               </div>
-              <div class="w-full h-[40px] border hover:border-black transition rounded-[3.2px] flex-jc-c p-2 cursor-pointer overflow-hidden">
+              <div class="w-full h-[50px] border hover:border-black transition rounded-[4px] flex-jc-c p-2 cursor-pointer overflow-hidden">
                 <img src="img/products/product2.png" alt="" class="h-full">
               </div>
-              <div class="w-full h-[40px] border hover:border-black transition rounded-[3.2px] flex-jc-c p-2 cursor-pointer overflow-hidden">
+              <div class="w-full h-[50px] border hover:border-black transition rounded-[4px] flex-jc-c p-2 cursor-pointer overflow-hidden">
                 <img src="img/products/product2.png" alt="" class="h-full">
               </div>
-              <div class="w-full h-[40px] border hover:border-black transition rounded-[3.2px] flex-jc-c p-2 cursor-pointer text-[#6E6E6E]">
+              <div class="w-full h-[50px] border hover:border-black transition rounded-[4px] flex-jc-c p-2 cursor-pointer text-[#6E6E6E]">
                 +6
               </div>
             </div>
 
             <div class="w-full flex-jsb-c gap-4">
-              <a href="#" class="text-blue underline">Повторить заказ</a>
+              <a href="#" class="text-blue underline text-[14px]">Повторить заказ</a>
 
-              <div class="flex-jse-c gap-2">
+              <div class="flex-jse-c gap-2 text-[14px]">
                 <img src="img/icons/worning-rounded-blue.svg" alt="worning-rounded-blue">
                 Подробнее
               </div>
